--- a/research.html
+++ b/research.html
@@ -71,20 +71,25 @@
       </div>
 
       <h2>refereed publications</h2>
-
-      <p class="bibitem">N. Ignatiadis, S. Saha, <b>D. L. Sun</b>, and
-      O. Muralidharan. <a href="https://arxiv.org/abs/1911.05970">Empirical
-      Bayes mean estimation with nonparametric errors via order
-      statistic regression</a>.</p>
       
       <p class="bibitem">A. Boyd and <b>D. L. Sun</b>.
 	<a href="https://arxiv.org/abs/1911.00648">salmon: A Symbolic Linear Regression Package for Python</a>.
-	Submitted to the <i>Journal of Statistical Software</i>.
+	In review in the <i>Journal of Statistical Software</i>.
+	<a href="http://www.github.com/ajboyd2/salmon">[software]</a>
       </p>
 
+      <p class="bibitem">N. Ignatiadis, S. Saha, <b>D. L. Sun</b>, and
+	O. Muralidharan. <a href="https://www.tandfonline.com/doi/full/10.1080/01621459.2021.1967164">
+	  Empirical Bayes mean estimation with
+nonparametric errors via order statistic regression
+	  on replicated data</a>. Accepted,
+	<i>Journal of the American Statistical Association</i>.
+      </p>
+      
       <p class="bibitem"><b>D. L. Sun</b>.
-	<a href="papers/Jensen.pdf">Convex Hulls and Jensen's Inequality</a>.
-	To appear in <i>The College Mathematics Journal</i>.
+	<a href="papers/Jensen.pdf">
+	Proof Without Words: Convex Hulls
+and Jensen’s Inequality</a>. <i>The College Mathematics Journal</i> 52:4, 298.
       </p>
 
       <p class="bibitem"><b>D. L. Sun</b>. (2020)
