--- a/research.html
+++ b/research.html
@@ -78,18 +78,24 @@
 	<a href="http://www.github.com/ajboyd2/salmon">[software]</a>
       </p>
 
+      <p class="bibitem"><b>D. L. Sun</b>, N. Schleicher, A. Recinos, and
+	L. Henriksen. Spatial clustering of hookah lounges, vape shops and
+	all tobacco retailers near colleges. 
+	To appear, <i>Nicotine and Tobacco Research</i>.
+      </p>
+      
       <p class="bibitem">N. Ignatiadis, S. Saha, <b>D. L. Sun</b>, and
-	O. Muralidharan. <a href="https://www.tandfonline.com/doi/full/10.1080/01621459.2021.1967164">
+	O. Muralidharan. (2021) <a href="https://www.tandfonline.com/doi/full/10.1080/01621459.2021.1967164">
 	  Empirical Bayes mean estimation with
 nonparametric errors via order statistic regression
-	  on replicated data</a>. Accepted,
+	  on replicated data</a>.
 	<i>Journal of the American Statistical Association</i>.
       </p>
       
       <p class="bibitem"><b>D. L. Sun</b>.
 	<a href="papers/Jensen.pdf">
 	Proof Without Words: Convex Hulls
-and Jensen’s Inequality</a>. <i>The College Mathematics Journal</i> 52:4, 298.
+and Jensen’s Inequality</a>. (2021) <i>The College Mathematics Journal</i> 52:4, 298.
       </p>
 
       <p class="bibitem"><b>D. L. Sun</b>. (2020)
