--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
 	Professor of Computer Science
 	at <a href="http://www.statistics.calpoly.edu/">Cal Poly, San
 	Luis Obispo</a> and a Senior Data Scientist
-	at <a href="http://www.google.com/about/company/">Google, Inc.</a>.</p>
+	  at <a href="http://www.google.com/about/company/">Google, Inc.</a>.</p>
+
+	<p><b>I will be moving to Stanford University as an Associate Professor
+	  (Teaching) of Statistics in Winter 2023.</b></p>
 
 	<p>My research interests include data science education,
 	statistical software, audio signal processing, and public
@@ -110,9 +113,10 @@
 
       <h2>experience</h2>
 
-<p>
-      Associate Professor of Statistics, <a href="http://statistics.calpoly.edu">Cal Poly</a>, 2020 - present.<br/>
-      Affiliate Professor of Computer Science, Cal Poly, 2018 - present.</br>
+      <p>
+      Associate Professor (Teaching) of Statistics, <a href="http://statistics.stanford.edu">Stanford University</a>, 2023 -.<br/>
+      Associate Professor of Statistics, <a href="http://statistics.calpoly.edu">Cal Poly</a>, 2020 - 2022.<br/>
+      Affiliate Professor of Computer Science, Cal Poly, 2018 - 2022.</br>
       Assistant Professor of Statistics, <a href="http://statistics.calpoly.edu">Cal Poly</a>, 2016 - 2020.<br/>
       Data Scientist, <a href="http://www.google.com/about/company">Google</a>, 2015 - present.</p>
 
