--- a/index.html
+++ b/index.html
@@ -68,15 +68,15 @@
 
       <div class="col-md-8 col-sm-8 col-xs-6">
 
-	<p>I am an Associate Professor of Statistics and Affiliate
-	Professor of Computer Science
-	at <a href="http://www.statistics.calpoly.edu/">Cal Poly, San
-	Luis Obispo</a> and a Senior Data Scientist
+	<p>I am Associate Professor of Statistics at Stanford University.
+	and a Senior Data Scientist
 	  at <a href="http://www.google.com/about/company/">Google, Inc.</a>.</p>
 
-	<p><b>I will be moving to Stanford University as an Associate Professor
-	  (Teaching) of Statistics in Winter 2023.</b></p>
-
+	<p>From 2016-2022, I was Associate Professor of Statistics and Affiliate
+	Professor of Computer Science
+	at <a href="http://www.statistics.calpoly.edu/">Cal Poly, San
+	Luis Obispo</a>.
+	
 	<p>My research interests include data science education,
 	statistical software, audio signal processing, and public
 	health. My research is funded by the National Institutes of
