adding link to Stanford

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
       <div class="col-md-8 col-sm-8 col-xs-6">
 
-	<p>I am Associate Professor of Statistics at Stanford University.
+	<p>I am Associate Professor of Statistics at <a href="http://statistics.stanford.edu">Stanford University</a>.
 	and a Senior Data Scientist
 	  at <a href="http://www.google.com/about/company/">Google, Inc.</a>.</p>
 
