--- a/index.html
+++ b/index.html
@@ -72,15 +72,14 @@
 	and a Senior Data Scientist
 	  at <a href="http://www.google.com/about/company/">Google, Inc.</a>.</p>
 
-	<p>From 2016-2022, I was Associate Professor of Statistics and Affiliate
+	<p>Until 2022, I was Associate Professor of Statistics and Affiliate
 	Professor of Computer Science
 	at <a href="http://www.statistics.calpoly.edu/">Cal Poly, San
 	Luis Obispo</a>.
 	
 	<p>My research interests include data science education,
 	statistical software, audio signal processing, and public
-	health. My research is funded by the National Institutes of
-	Health and the National Science Foundation.</p>
+	health. My research has been funded by the DARPA, NIH, and the NSF.</p>
 
 <!--
       <p>I recently completed my Ph.D. in Statistics at <a href=http://www-stat.stanford.edu>Stanford</a>, where I worked with <a href=http://www-stat.stanford.edu/~jtaylo>Jonathan Taylor</a> (Statistics) and <a href="https://ccrma.stanford.edu/~jos/">Julius Smith</a> (Music, Electrical Engineering). I was also affiliated with the <a href=http://ccrma.stanford.edu>Center for Computer Research in Music and Acoustics</a> (CCRMA). I'm generally interested in statistics, signal processing, machine learning, and musicology&mdash;particularly their intersection.</p>
