--- a/index.html
+++ b/index.html
@@ -68,40 +68,21 @@
 
       <div class="col-md-8 col-sm-8 col-xs-6">
 
-	<p>I am Associate Professor of Statistics at <a href="http://statistics.stanford.edu">Stanford University</a>.
-	and a Senior Data Scientist
-	  at <a href="http://www.google.com/about/company/">Google, Inc.</a>.</p>
+	<p>I am an Associate Professor of Statistics at <a href="http://statistics.stanford.edu">Stanford University</a>
+	  and a Senior Data Scientist 
+	  at <a href="http://www.google.com/about/company/">Google, Inc.</a></p>
 
-	<p>Until 2022, I was Associate Professor of Statistics and Affiliate
-	Professor of Computer Science
-	at <a href="http://www.statistics.calpoly.edu/">Cal Poly, San
-	Luis Obispo</a>.
+	<p>Until 2022, I was an Associate Professor of Statistics and Affiliate
+	  Professor of Computer Science
+	  at <a href="http://www.statistics.calpoly.edu/">Cal Poly, San
+	    Luis Obispo</a>. In Fall 2022, I visited
+	  <a href="https://www.csie.ntu.edu.tw/">National Taiwan University.</a></p>
 	
 	<p>My research interests include data science education,
 	statistical software, audio signal processing, and public
-	health. My research has been funded by the DARPA, NIH, and the NSF.</p>
+	health. My research has been supported by DARPA, NIH, and the NSF.</p>
 
-<!--
-      <p>I recently completed my Ph.D. in Statistics at <a href=http://www-stat.stanford.edu>Stanford</a>, where I worked with <a href=http://www-stat.stanford.edu/~jtaylo>Jonathan Taylor</a> (Statistics) and <a href="https://ccrma.stanford.edu/~jos/">Julius Smith</a> (Music, Electrical Engineering). I was also affiliated with the <a href=http://ccrma.stanford.edu>Center for Computer Research in Music and Acoustics</a> (CCRMA). I'm generally interested in statistics, signal processing, machine learning, and musicology&mdash;particularly their intersection.</p>
-!-->
-      
-<!--  <p>I'm also a consultant with the Center for Teaching and Learning. Please see my <a href=ctl>CTL</a> page.</p>
-
-<p>I've had the fortune to do internships at <a href="http://www.adobe.com/technology.html">Adobe Research</a> in San Francisco (Jun
-  2012 - Jan 2013) with <a href="https://ccrma.stanford.edu/~gautham">Gautham Mysore</a> and at the <a href="https://www.oca.eu">Observatoire de la C&ocirc;te d'Azur</a> in Nice, France (Jun 2013 - Sept 2013) with <a href="http://www.unice.fr/cfevotte">C&eacute;dric F&eacute;votte</a>, all working 
-    on problems in machine learning and audio.</p> !-->
-
-<!--    <p>Before moving to California, I was an undergrad at --
-  --    <a href=http://www.harvard.edu>Harvard</a>, where I studied --
-  --    <a href=http://music.fas.harvard.edu>Music</a> and --
-  --    <a href=http://math.harvard.edu>Mathematics</a>. My thesis --
-  --    advisor was --
-  -- --
-  --<a href=http://www.music.fas.harvard.edu/faculty/rwolf.html>Richard --
-  --Wolf</a>.
-    </p>!-->
-
-      <br/><br/>
+      <br/><br/><br/><br/><br/>
 
       </div>
 
