--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
 	<p>Until 2022, I was an Associate Professor of Statistics and Affiliate
 	  Professor of Computer Science
 	  at <a href="http://www.statistics.calpoly.edu/">Cal Poly, San
-	    Luis Obispo</a>. In Fall 2022, I visited
-	  <a href="https://www.csie.ntu.edu.tw/">National Taiwan University.</a></p>
+	    Luis Obispo</a>. I spent Fall 2022 visiting
+	  <a href="https://www.csie.ntu.edu.tw/">National Taiwan University</a> in Taipei.</p>
 	
 	<p>My research interests include data science education,
 	statistical software, audio signal processing, and public
 	health. My research has been supported by DARPA, NIH, and the NSF.</p>
 
-      <br/><br/><br/><br/><br/>
+      <br/><br/><br/><br/>
 
       </div>
 
@@ -115,7 +115,7 @@
       <h2>contact</h2>
       
       <p>
-&#100;&#115;&#117;&#110;&#048;&#057;&#064;&#099;&#097;&#108;&#112;&#111;&#108;&#121;&#046;&#101;&#100;&#117;
+&#x64;&#x6c;&#x73;&#x75;&#x6e;&#x40;&#x73;&#x74;&#x61;&#x6e;&#x66;&#x6f;&#x72;&#x64;&#x2e;&#x65;&#x64;&#x75;
       </p>
 
       <h2>calendar</h2>
