updating teaching page

--- a/teaching.html
+++ b/teaching.html
@@ -93,6 +93,21 @@
 	</thead>
 	<tbody>
 	  <tr>
+	    <td>Winter 2023</td>
+	    <td><a href="https://dlsun.github.io/stats112">STATS 112</a></td>
+	    <td>Principles of Data Science</td>
+	  </tr>
+	  <tr>
+	    <td>Winter 2022</td>
+	    <td><a href="https://dlsun.github.io/stat312">STAT 312</a></td>
+	    <td>Probability and Statistics for Engineers</td>
+	  </tr>
+	  <tr>
+	    <td>Fall 2021</td>
+	    <td>DATA 402</a></td>
+	    <td>Mathematical Foundations of Data Science</td>
+	  </tr>
+	  <tr>
 	    <td>Summer 2020</td>
 	    <td><a href="https://dlsun.github.io/Stat305-S20/">STAT 305</a></td>
 	    <td>Introduction to Probability and Simulation</td>
