updating spring 2023 teaching

--- a/teaching.html
+++ b/teaching.html
@@ -93,6 +93,11 @@
 	</thead>
 	<tbody>
 	  <tr>
+	    <td>Spring 2023</td>
+	    <td>STATS 319</td>
+	    <td>Literature of Statistics</td>
+	  </tr>
+	  <tr>
 	    <td>Winter 2023</td>
 	    <td><a href="https://dlsun.github.io/stats112">STATS 112</a></td>
 	    <td>Principles of Data Science</td>
