Update job title at Google

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="col-md-8 col-sm-8 col-xs-6">
 
 	<p>I am an Associate Professor of Statistics at <a href="http://statistics.stanford.edu">Stanford University</a>
-	  and a Senior Data Scientist 
+	  and a Staff Data Scientist 
 	  at <a href="http://www.google.com/about/company/">Google, Inc.</a></p>
 
 	<p>Until 2022, I was an Associate Professor of Statistics and Affiliate
