updating fall 2023 teaching"

--- a/teaching.html
+++ b/teaching.html
@@ -93,6 +93,11 @@
 	</thead>
 	<tbody>
 	  <tr>
+	    <td>Autumn 2023</td>
+	    <td><a href="https://stats110.stanford.edu/">STATS 110</a></td>
+	    <td>Statistical Methods in Engineering and the Physical Sciences</td>
+	  </tr>
+	  <tr>
 	    <td>Spring 2023</td>
 	    <td>STATS 319</td>
 	    <td>Literature of Statistics</td>
