updating spring 2023 teaching link

--- a/teaching.html
+++ b/teaching.html
@@ -99,7 +99,7 @@
 	  </tr>
 	  <tr>
 	    <td>Spring 2023</td>
-	    <td>STATS 319</td>
+	    <td><a href="https://stats319.stanford.edu">STATS 319</a></td>
 	    <td>Literature of Statistics</td>
 	  </tr>
 	  <tr>
