--- a/teaching.html
+++ b/teaching.html
@@ -93,6 +93,11 @@
 	</thead>
 	<tbody>
 	  <tr>
+	    <td>Winter 2024</td>
+	    <td><a href="https://datasci112.stanford.edu/">DATASCI 112</a></td>
+	    <td>Principles of Data Science</td>
+	  </tr>
+	  <tr>
 	    <td>Autumn 2023</td>
 	    <td><a href="https://stats110.stanford.edu/">STATS 110</a></td>
 	    <td>Statistical Methods in Engineering and the Physical Sciences</td>
