--- a/teaching.html
+++ b/teaching.html
@@ -98,6 +98,11 @@
 	    <td>Principles of Data Science</td>
 	  </tr>
 	  <tr>
+	    <td></td>
+	    <td>DATASCI 192A</td>
+	    <td>Data Science Practicum I (co-taught with Mallory Nobles)</td>
+	  </tr>
+	  <tr>
 	    <td>Autumn 2023</td>
 	    <td><a href="https://stats110.stanford.edu/">STATS 110</a></td>
 	    <td>Statistical Methods in Engineering and the Physical Sciences</td>
