updating research with published paper

--- a/research.html
+++ b/research.html
@@ -72,9 +72,9 @@
 
       <h2>refereed publications</h2>
       
-      <p class="bibitem">A. Boyd and <b>D. L. Sun</b>.
-	<a href="https://arxiv.org/abs/1911.00648">salmon: A Symbolic Linear Regression Package for Python</a>.
-	To appear, <i>Journal of Statistical Software</i>.
+      <p class="bibitem">A. Boyd and <b>D. L. Sun</b> (2024).
+	<a href="https://www.jstatsoft.org/article/view/v108i08">salmon: A Symbolic Linear Regression Package for Python</a>.
+	<i>Journal of Statistical Software</i>, 108(8), 1-26. 
 	<a href="http://www.github.com/ajboyd2/salmon">[software]</a>
       </p>
 
